erDiagram
  HARNESS_PROFILE ||--o{ GATEWAY_CLIENT : classifies
  GATEWAY_CLIENT ||--o{ GATEWAY_CLIENT_KEY : owns
  PROVIDER ||--o{ UPSTREAM_ENDPOINT : exposes
  PROVIDER ||--o{ PROVIDER_ACCOUNT : owns
  PROVIDER_ACCOUNT ||--o{ PROVIDER_CREDENTIAL : contains
  UPSTREAM_ENDPOINT ||--o{ ENDPOINT_CREDENTIAL : allows
  PROVIDER_CREDENTIAL ||--o{ ENDPOINT_CREDENTIAL : binds
  MODEL_DEFINITION ||--o{ PROVIDER_MODEL_BINDING : describes
  UPSTREAM_ENDPOINT ||--o{ PROVIDER_MODEL_BINDING : serves
  ROUTE_RULE ||--|{ ROUTE_TARGET : orders
  UPSTREAM_ENDPOINT ||--o{ ROUTE_TARGET : targets
  PROVIDER_MODEL_BINDING ||--o{ ROUTE_TARGET : uses
  GATEWAY_CLIENT ||--o{ REQUEST : sends
  REQUEST ||--o{ ATTEMPT : contains
  ROUTE_RULE ||--o{ REQUEST : resolves
  ROUTE_TARGET ||--o{ ATTEMPT : executes
  PROVIDER_CREDENTIAL ||--o{ ATTEMPT : authenticates
  ATTEMPT ||--o| NORMALIZED_USAGE : reports
  ATTEMPT ||--o| PRICING_SNAPSHOT : priced_by
